@@ -5,9 +5,8 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -15,39 +14,48 @@ import java.util.List;
  * This allows your Vue.js frontend to communicate with the Spring Boot backend
  */
 @Configuration
-public class WebConfig implements WebMvcConfigurer {
-
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/**")  // Apply to ALL endpoints
-                .allowedOrigins(
-                        "http://localhost:5173",      // Vite default
-                        "http://localhost:3000",      // Alternative
-                        "http://127.0.0.1:5173",      // IP version
-                        "http://127.0.0.1:3000"
-                )
-                .allowedMethods("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
-                .allowedHeaders("*")
-                .allowCredentials(true)
-                .maxAge(3600);
-    }
+public class WebConfig {
 
     /**
-     * Additional CORS configuration as a bean
-     * This provides a second layer of CORS handling
+     * Configure CORS to allow requests from frontend
+     * Uses allowedOriginPatterns for compatibility with allowCredentials
      */
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
+        // Allow credentials (cookies, authorization headers)
         config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(List.of("http://localhost:*", "http://127.0.0.1:*"));
-        config.addAllowedHeader("*");
-        config.addAllowedMethod("*");
+
+        // Use allowedOriginPatterns instead of allowedOrigins when credentials are enabled
+        config.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",      // Any port on localhost
+                "http://127.0.0.1:*"       // Any port on 127.0.0.1
+        ));
+
+        // Or specify exact ports for better security:
+        // config.setAllowedOrigins(Arrays.asList(
+        //     "http://localhost:5173",
+        //     "http://localhost:3000",
+        //     "http://127.0.0.1:5173",
+        //     "http://127.0.0.1:3000"
+        // ));
+
+        // Allow all headers
+        config.setAllowedHeaders(List.of("*"));
+
+        // Allow all standard HTTP methods
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+        ));
+
+        // Cache preflight requests for 1 hour
         config.setMaxAge(3600L);
 
+        // Apply CORS configuration to all API endpoints
         source.registerCorsConfiguration("/**", config);
+
         return new CorsFilter(source);
     }
 }
